--- a/html_week_1/comicPage/index.html
+++ b/html_week_1/comicPage/index.html
@@ -12,7 +12,7 @@
         background: transparent url(panel5.jpg) no-repeat top left;
         height: 556px;
         width: 572px;
-        float: left;
+
     }
     #row3 div{
     float: left;
@@ -75,16 +75,14 @@
 
 
 <div class ="row" id="row3">
+    <div id="panel4">
     <img src="panel4.jpg" alt="This is the fourth image">
+        </div>
 
     <div id="panel5">
 
-        </div>
-
-
-
-
-</div>
+    </div>
+    </div>
 
 <div class="topRow"></div>
 <span id="bubble" class="bubbles" >JUST BELOW...</span>
