Few more adds on to the comic bubbles

--- a/html_week_1/comicPage/index.html
+++ b/html_week_1/comicPage/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
+
     #panel3 {
 
         background: transparent url(panel3.jpg) no-repeat top left;
@@ -56,6 +57,44 @@
         line-height: 16px;
     }
 
+    #bubble4 {
+        position: absolute;
+        top: 470px;
+        left: 30px;
+        line-height: 16px;
+    }
+
+
+    #bubble5 {
+        position: absolute;
+        top: 702px;
+        left: 220px;
+        line-height: 16px;
+    }
+    #bubble6 {
+        position: absolute;
+        top: 1178px;
+        left: 390px;
+        line-height: 16px;
+        width: 140px;
+    }
+
+    #bubble7 {
+        position: absolute;
+        top: 1264px;
+        left: 390px;
+        line-height: 16px;
+        width: 130px;
+    }
+    #bubble8 {
+        position: absolute;
+        top: 1282px;
+        left: 720px;
+        line-height: 16px;
+        width: 15px;
+        font-size: 20px;
+
+    }
 
 </style>
 <head lang="en">
@@ -65,29 +104,29 @@
 </head>
 <body>
 
-<div class ="row">
-    <img src="panel1.jpg" alt="This is the first image">
-    <img src="panel2.jpg" alt="This is the second image">
-</div>
+    <div class ="row">
+        <img src="panel1.jpg" alt="This is the first image">
+        <img src="panel2.jpg" alt="This is the second image">
+    </div>
 
-<div class ="row" id="panel3">
-</div>
+    <div class ="row" id="panel3">
+    </div>
 
 
-<div class ="row" id="row3">
-    <div id="panel4">
-    <img src="panel4.jpg" alt="This is the fourth image">
+    <div class ="row" id="row3">
+        <div id="panel4">
+            <img src="panel4.jpg" alt="This is the fourth image">
         </div>
 
-    <div id="panel5">
+        <div id="panel5">
 
-    </div>
-    </div>
+        </div>
 
-<div class="topRow"></div>
-<span id="bubble" class="bubbles" >JUST BELOW...</span>
 
-<span id="bubble1" class="bubbles">I don't like the look of this, Terrax said <strong>GALACTUS</strong> was weak, but he's holding his own against thor and iron man together!</span>
+    <div class="topRow"></div>
+    <span id="bubble" class="bubbles" >JUST BELOW...</span>
+
+    <span id="bubble1" class="bubbles">I don't like the look of this, Terrax said <strong>GALACTUS</strong> was weak, but he's holding his own against thor and iron man together!</span>
 
 <span id="bubble2" class="bubbles"><pre>
   I ain't so sure of
@@ -99,6 +138,35 @@
   ..or does <strong>galactus</strong>
   look...Smaller
   </pre></span>
+</div>
+
+<span id="bubble4" class="bubbles">
+  <pre>Who... <strong>Doctor
+   Strange!</strong></pre>
+
+  </span>
+
+<span id="bubble5" class="bubbles">
+  <pre>
+     but surely even your
+ Powers are of no use against
+  The likes of <strong>galactus?</strong></pre>
+
+  </span>
+
+<span id="bubble6" class="bubbles">
+  His eyes grow wide his face pales
+
+  </span>
+<span id="bubble7" class="bubbles">
+  he trembles, and then.....
+
+  </span>
+<span id="bubble8" class="bubbles">
+  <strong>galactus screams!</strong>
+
+  </span>
+
 </div>
 
 
